--- a/src/main/webapp/js/account/account.html
+++ b/src/main/webapp/js/account/account.html
@@ -44,8 +44,8 @@
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label for="oldPassword" class="col-lg-2 control-label" data-i18n="_old-password_"></label>
-              <div class="col-lg-10">
+              <label for="oldPassword" class="col-lg-4 control-label" data-i18n="_old-password_"></label>
+              <div class="col-lg-8">
                 <input type="password" id="oldPassword" name="oldPassword" class="form-control" data-i18n-attr="_old-password_|placeholder" ng-model="password.oldPassword" required/>
                 <div class="error" ng-show="changePasswordForm.oldPassword.$dirty && changePasswordForm.oldPassword.$invalid">{{'_invalid-field-message_' | i18n}}:
                   <span ng-show="changePasswordForm.oldPassword.$error.required" data-i18n="_old-password-missed-message_"></span>
@@ -53,17 +53,25 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="newPassword" class="col-lg-2 control-label" data-i18n="_new-password_"></label>
-              <div class="col-lg-10">
-                <input type="password" id="newPassword" name="newPassword" class="form-control" data-i18n-attr="_new-password_|placeholder" ng-model="password.newPassword" required/>
+              <label for="newPassword" class="col-lg-4 control-label" data-i18n="_new-password_"></label>
+              <div class="col-lg-8">
+                <div class="row">
+                    <div class="col-lg-10">
+                        <input type="password" id="newPassword" name="newPassword" class="form-control" data-i18n-attr="_new-password_|placeholder" ng-model="password.newPassword" regex-validate="basicPassword" required/>
+                    </div>
+                    <div>
+                        <i class="glyphicon glyphicon-question-sign" style="margin-top: 10px;" data-toggle="tooltip" data-i18n-attr="_basic-password-guideline_|data-original-title" data-placement="bottom"></i>
+                    </div>
+                </div>
                 <div class="error" ng-show="changePasswordForm.newPassword.$dirty && changePasswordForm.newPassword.$invalid">{{'_invalid-field-message_' | i18n}}:
                   <span ng-show="changePasswordForm.newPassword.$error.required" data-i18n="_new-password-missed-message_"></span>
+                  <span ng-show="changePasswordForm.newPassword.$error.regexValidate && !changePasswordForm.newPassword.$error.required" data-i18n="_weak-password-message_"></span>
                 </div>
               </div>
             </div>
               <div class="form-group">
-                  <label for="confirmPassword" class="col-lg-2 control-label" data-i18n="_confirm-password_"></label>
-                  <div class="col-lg-10">
+                  <label for="confirmPassword" class="col-lg-4 control-label" data-i18n="_confirm-password_"></label>
+                  <div class="col-lg-8">
                       <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" data-i18n-attr="_confirm-password_|placeholder" ng-model="password.confirmPassword" confirm-field="newPassword" required/>
                       <div class="error" ng-show="changePasswordForm.confirmPassword.$dirty && changePasswordForm.confirmPassword.$invalid">{{'_invalid-field-message_' | i18n}}:
                           <span ng-show="changePasswordForm.confirmPassword.$error.required" data-i18n="_confirm-password-missed-message_"></span>
