thesaurus manager warning

--- a/src/main/webapp/js/workbench/manual-revision-and-authoring/ontology.html
+++ b/src/main/webapp/js/workbench/manual-revision-and-authoring/ontology.html
@@ -9,6 +9,8 @@
         {{'_ontologies_' | i18n}}
     </h3>
 
+    <p class="warning-msg" data-i18n="_thesaurus-manager-warning_"></p>
+
     <table class="table table-striped">
         <thead>
         <tr>
