the second close button for modal iframes fixed

--- a/src/main/webapp/js/workbench/default.html
+++ b/src/main/webapp/js/workbench/default.html
@@ -23,7 +23,7 @@
                 <div class="modal" id="fullModalDirect">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" style="float:left" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <button type="button" class="close" style="float:left" ng-click="close('#fullModalDirect')" aria-hidden="true">&times;</button>
                             <button type="button" class="close" ng-click="close('#fullModalDirect')" aria-hidden="true">&times;</button>
                             <h5 class="modal-title green bold" data-i18n="{{modaltitle}}"></h5>
                         </div>
