--- a/src/main/webapp/js/workbench/manual-revision-and-authoring/ontology.html
+++ b/src/main/webapp/js/workbench/manual-revision-and-authoring/ontology.html
@@ -94,6 +94,7 @@
     <div class="modal" id="fullModal">
     <div class="modal-content">
         <div class="modal-header">
+            <button type="button" class="close" style="float:left" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
             <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">MiniDix</h5>
         </div>
