show/hide menu button fixed; embedded minidix

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -234,6 +234,7 @@
     <script src="js/workbench/manual-revision-and-authoring/ontowiki-controller.js"></script>
     <script src="js/workbench/manual-revision-and-authoring/ontology-controller.js"></script>
     <script src="js/workbench/manual-revision-and-authoring/edit-uploads-controller.js"></script>
+    <script src="js/workbench/manual-revision-and-authoring/thesaurus-controller.js"></script>
     <script src="js/workbench/classification-and-enrichment/geolift-controller.js"></script>
     <script src="js/workbench/linking-and-fusing/limes-controller.js"></script>
     <script src="js/settings/settings-controller.js"></script>
