--- a/src/main/webapp/js/workbench/search-querying-and-exploration/search.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/search.html
@@ -1,5 +1,6 @@
 <div ng-controller="SearchCtrl">
     <h3 class="green bold" data-i18n="_search_"></h3>
+    <button class="btn btn-link" ng-click="toggleStackMenu()" data-i18n="{{toggleButtonName}}"></button>
 
     <iframe id="searchFrame" frameborder="0" style="width:100%; height:1400px" src="{{url}}"></iframe>
 
