First changes for LIMES comparison page, added necessary library for slider, altered ontology to allow MS Sql Server databases.

--- a/src/main/webapp/js/workbench/extraction-and-loading/d2rq-mapping.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/d2rq-mapping.html
@@ -98,7 +98,7 @@
                         <select id="uriColumn" class="form-control" ng-model="mapping.uriColumn" ng-options="c for c in tableColumns | orderBy:'toString()'"></select>
                     </div>
                 </div>
-                <div class="form-group" ng-show="mapping.ptype=='patternColumns'">
+                <div class="form-group" ng-show="mapping.ptype=='patternColumns'" style="" id="patternColumns">
                     <label class="col-lg-1 control-label" data-i18n="_uri-pattern-columns_"></label>
                     <div class="col-lg-11">
                         <ul class="list-unstyled">
