--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/bootstrap-modal.css" rel="stylesheet"/>
+    <link href="css/bootstrap-slider.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
     
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -198,6 +199,7 @@
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
     <script src="js/app.js"></script>
+    <script src="lib/slider/bootstrap-slider.js"></script>
     <!-- services for the different modules/pages -->
     <script src="js/services/config.js"></script>
     <script src="js/services/services.js"></script>
