--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/bootstrap-modal-bs3patch.css" rel="stylesheet"/>
     <link href="css/bootstrap-modal.css" rel="stylesheet"/>
+    <link href="css/bootstrap-slider.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet"/>
     
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -58,8 +59,8 @@
     <script src="lib/angularjs/angular-route.js"></script>
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
-    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
+    <script src="lib/slider/bootstrap-slider.js"></script>
     <!-- services for the different modules/pages -->
     <script src="js/services/config.js"></script>
     <script src="js/services/services.js"></script>
