--- a/src/main/webapp/js/workbench/linking-and-fusing/limes.html
+++ b/src/main/webapp/js/workbench/linking-and-fusing/limes.html
@@ -323,10 +323,12 @@
 	    <input class="form-control input-sm" id="AcceptThresh" ng-model="limes.AcceptThresh"/>
 	    </div>
 	    <div class="col-xs-2">
+	    <!--  
 	    <label for="ReviewThresh" data-i18n="_threshold_"></label>
+	    -->
 	    </div>
 	    <div class="col-xs-4">
-	    <input class="form-control input-sm" id="ReviewThresh" ng-model="limes.ReviewThresh"/>
+	    <input class="form-control input-sm" id="ReviewThresh" ng-model="limes.ReviewThresh" style="display: none;"/>
 	    </div>
 	</div>
 	<br>
@@ -338,10 +340,12 @@
 	    <input class="form-control input-sm" id="AcceptRelation" ng-model="limes.AcceptRelation"/>
 	    </div>
 	    <div class="col-xs-2">
+	    <!-- 
 	    <label for="ReviewRelation" data-i18n="_relation_"></label>
+	    -->
 	    </div>
 	    <div class="col-xs-4">
-	    <input class="form-control input-sm" id="ReviewRelation" ng-model="limes.ReviewRelation"/>
+	    <input class="form-control input-sm" id="ReviewRelation" ng-model="limes.ReviewRelation" style="display: none;"/>
 	    </div>
 	</div>
 	<br>
