--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -50,9 +50,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- <script src="lib/jquery/jquery-1.7.2.min.js"></script> -->
-    <script src="lib/jquery/jquery-1.9.1.js"></script>
+    
+	<script src="lib/jquery/jquery-1.9.1.js"></script>
     <script src="lib/jquery/jquery-ui-1.10.1.custom.min.js"></script>
-     
+
     <script src="lib/bootstrap/bootstrap.js"></script>
     <script src="lib/angularjs/angular.js"></script>
     <script src="lib/angularjs/angular-cookies.js"></script>
@@ -71,6 +72,7 @@
     <script src="js/services/graph-group-service.js"></script>
     <script src="js/services/ontology-service.js"></script>
     <script src="js/services/d2rq-service.js"></script>
+    <script src="js/services/users-service.js"></script>
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/login-controller.js"></script>
@@ -94,6 +96,8 @@
     <script src="js/settings/namespaces/namespaces-controller.js"></script>
     <script src="js/settings/components/components-controller.js"></script>
     <script src="js/account/account-controller.js"></script>
+    <script src="js/admin/users/users-controller.js"></script>
+    <script src="js/admin/roles-controller.js"></script>
 
     <!-- directives -->
     <script src="js/directives.js"></script>
