--- a/src/main/webapp/system-setup.html
+++ b/src/main/webapp/system-setup.html
@@ -1,3 +1,27 @@
-<div>
+<div ng-controller="GeneralSettingsCtrl">
     <h4 data-i18n="_system-setup-page-content_"></h4>
+
+    <dl class="dl-horizontal">
+        <dt>{{'_framework-uri_' | i18n}}</dt>
+        <dd>{{settings.publicEndpointService}}</dd>
+
+        <dt>{{'_settings-base-uri_' | i18n}}</dt>
+        <dd>{{settings.uriBase}}</dd>
+
+        <dt>{{'_settings-graph_' | i18n}}</dt>
+        <dd>{{settings.defaultSettingsGraphUri}}</dd>
+
+        <dt>{{'_settings-endpoint_' | i18n}}</dt>
+        <dd>{{settings.publicEndpointService}}</dd>
+    </dl>
+
+    <div class="form-actions">
+        <div class="checkbox">
+        <label>
+        <input type="checkbox" ng-model="reset"> {{'_reset_' | i18n}}
+        </label>
+        </div>
+        <button type="submit" ng-click="setup();" class="btn btn-sm btn-primary" data-i18n="_setup_"></button>
+    </div>
+
 </div>
