--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -59,7 +59,7 @@
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
     <script src="js/app.js"></script>
-    <!-- services for the different modules/pages -->
+   <!-- services for the different modules/pages -->
     <script src="js/services/config.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/services/configuration-service.js"></script>
@@ -67,6 +67,7 @@
     <script src="js/services/account-service.js"></script>
     <script src="js/services/login-service.js"></script>
     <script src="js/services/graph-group-service.js"></script>
+    <script src="js/services/users-service.js"></script>    
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/login-controller.js"></script>
