--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -199,6 +199,8 @@
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
     <script src="js/app.js"></script>
     <script src="lib/slider/bootstrap-slider.js"></script>
+    <script src="lib/xml2json.min.js"></script>
+    
     <!-- services for the different modules/pages -->
     <script src="js/services/config.js"></script>
     <script src="js/services/services.js"></script>
