--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,28 +43,26 @@
 			<div class="col-xs-9">
 	                <a class="navbar-brand" href="#/"></a>
 	                    <div ng-controller="NavbarCtrl">
-	                    	<ul class="nav navbar-nav navbar-left">
-	                        <li ng-class="getClass('/home')"><a href="#/"><div class="glyphicon glyphicon-cog"></div> Workbench </a></li>
-	                        <!-- <li ng-class="getClass('/batch')""><a href="#/batch"><div class="glyphicon glyphicon-list"></div> Batch job </a></li> -->
-	                        <li ng-class="getClass('/settings')">
-                            <a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
-	                        <li ng-if="isUserAuthenticated()" ng-class="getClass('/account')">
-                            <a href="#/account"><div class="glyphicon glyphicon-user"></div> Account </a></li>
-	                        </ul>
-
+	                    	<ul ng-if="isUserAuthenticated()" class="nav navbar-nav navbar-left">
+    	                        <li ng-class="getClass('/workbench')">
+                                    <a href="#/workbench"><div class="glyphicon glyphicon-cog"></div> Workbench </a></li>
+    	                        <li ng-class="getClass('/settings')">
+                                    <a href="#/settings"><div class="glyphicon glyphicon-wrench"></div> Settings </a></li>
+    	                        <li ng-class="getClass('/account')">
+                                    <a href="#/account"><div class="glyphicon glyphicon-user"></div> Account </a></li>
+    	                        </ul>
 	                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                            <div ng-if="isUserAuthenticated() && $root.isSystemSetUp">
-                                        <span class="strong">You are logged in as <strong>{{currentAccount.username}}</strong></span> <button class="btn-sm btn-success" ng-click="logout()">Logout</button>
-                            </div>
-                            <div ng-if="!isUserAuthenticated() && $root.isSystemSetUp">
-                                        <!-- ng-disabled="loginForm.$invalid" -->
-                                        <button type="button" class="btn-sm btn-success navbar-left" data-toggle="modal" data-target="#modalLogin" ng-click="clearLoginForm()">Login</button>
-                                        <button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalSignUp" ng-click="clearSignUpForm()">Register</button>
-                                    	<button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalRestorePassword" ng-click="clearRestorePasswordForm()">Forgot password</button>
-                            </div>
-                            </li>
-	                        <!-- <li><a href="http://geoknow.eu" target="_blanc"><div class="glyphicon glyphicon-info-sign"></div> About</a></li> -->
+                                <li>
+                                <div ng-if="isUserAuthenticated() && $root.isSystemSetUp">
+                                            <span class="strong">You are logged in as <strong>{{currentAccount.username}}</strong></span> <button class="btn-sm btn-success" ng-click="logout()">Logout</button>
+                                </div>
+                                <div ng-if="!isUserAuthenticated() && $root.isSystemSetUp">
+                                            <!-- ng-disabled="loginForm.$invalid" -->
+                                            <button type="button" class="btn-sm btn-success navbar-left" data-toggle="modal" data-target="#modalLogin" ng-click="clearLoginForm()">Login</button>
+                                            <button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalSignUp" ng-click="clearSignUpForm()">Register</button>
+                                        	<button type="button" class="btn-xs btn-link navbar-left" data-toggle="modal" data-target="#modalRestorePassword" ng-click="clearRestorePasswordForm()">Forgot password</button>
+                                </div>
+                                </li>
 	                        </ul>
 	                    </div>
 	        </div>
@@ -208,12 +206,14 @@
     <script src="js/services/configuration-service.js"></script>
     <script src="js/services/graph-service.js"></script>
     <script src="js/services/account-service.js"></script>
+    <script src="js/services/job-service.js"></script>
     <script src="js/services/login-service.js"></script>
     <script src="js/services/graph-group-service.js"></script>
     <script src="js/services/users-service.js"></script>
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/login-controller.js"></script>
+    <script src="js/workbench/dashboard-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/import-rdf-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/sparqlify-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/triplegeo-controller.js"></script>
