add authsessions to be saved in sessionsGraph (new) and its corresponding tests

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -221,6 +221,7 @@
     <script src="js/services/login-service.js"></script>
     <script src="js/services/graph-group-service.js"></script>
     <script src="js/services/users-service.js"></script>
+    <script src="js/services/authsession-service.js"></script>
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/login-controller.js"></script>
