--- a/src/main/webapp/js/workbench/dashboard.html
+++ b/src/main/webapp/js/workbench/dashboard.html
@@ -22,7 +22,11 @@
 
 	<div class="col-xs-10 contents" app-view-segment="1" >
     
-		<h3 class="green bold">Dashboard</h3>
+	 <h3 class="green bold">{{component.label}} </h3>
+    <dl class="dl-horizontal">
+    <dt>Version:</dt>
+    <dd>{{component.version}}</dd>
+    </dl>
 			
 		<table class="table table-striped" ng-controller="DashboardCtrl">
 		<thead>
