--- a/src/main/webapp/js/admin/users/users.html
+++ b/src/main/webapp/js/admin/users/users.html
@@ -6,7 +6,7 @@
     <div class="modal fade" id="modalUser">
         <form name="userForm" class="form-horizontal InputForm" role="form">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="close('#modalUser')" aria-hidden="true">&times;</button>
                 <h5 class="modal-title green bold">{{modaltitle}}</h5>
             </div>
             <div class="modal-body">
@@ -55,7 +55,7 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn-sm btn-success" ng-click="save();" ng-disabled="userForm.$invalid">Save</button>
-                <button type="button" class="btn-sm btn-default" ng-click="close('#modalLogin')">Cancel</button>
+                <button type="button" class="btn-sm btn-default" ng-click="close('#modalUser')">Cancel</button>
             </div>
         </form>
     </div>
