--- a/src/main/webapp/js/workbench/manual-revision-and-authoring/ontowiki.html
+++ b/src/main/webapp/js/workbench/manual-revision-and-authoring/ontowiki.html
@@ -16,7 +16,7 @@
   <div class="modal fade" id="fullModal" >
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{component.label}}</h5>
     </div>
     <div class="modal-body">
