--- a/src/main/webapp/system-setup.html
+++ b/src/main/webapp/system-setup.html
@@ -1,11 +1,10 @@
-<div class="container-fluid" ng-controller="GeneralSettingsCtrl">
+<div class="container-fluid"  ng-controller="SystemSetupCtrl">
 
-    <h4 data-i18n="_system-setup-page-content_"></h4>
-
+    <h4> System Setup</h4>
 
     <dl class="dl-horizontal">
         <dt>Framework URI</dt>
-        <dd>{{settings.publicEndpointService}}</dd>
+        <dd>{{settings.frameworkUri}}</dd>
 
         <dt>Resources NS</dt>
         <dd>{{settings.uriBase}}</dd>
@@ -20,7 +19,7 @@
         <dd>{{settings.flagPath}}</dd>
     </dl>
 
-    <div class="form-actions">
+    <div class="form-actions" >
          <div class="checkbox">
             <label>
             <input type="checkbox" ng-model="reset"> Reset
