--- a/src/main/webapp/system-setup.html
+++ b/src/main/webapp/system-setup.html
@@ -15,6 +15,9 @@
         <dt>Endpoint</dt>
         <dd>{{settings.publicEndpointService}}</dd>
 
+        <dt>AuthEndpoint</dt>
+        <dd>{{settings.authSparqlEndpoint}}</dd>
+
         <dt>Setup flag paht</dt>
         <dd>{{settings.flagPath}}</dd>
     </dl>
