--- a/src/main/webapp/js/workbench/extraction-and-loading/sparqlify.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/sparqlify.html
@@ -21,7 +21,7 @@
       </select>
     </div>
  -->    <div class="form-group">
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Sparqlify</a>
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();">Launch Sparqlify</a>
     </div>
   </form>
 
@@ -29,7 +29,7 @@
   <div class="modal fade" id="fullModal">
     <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="closeModal()" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Sparqlify</h5>
     </div>
     <div class="modal-body">
