--- a/src/main/webapp/js/workbench/search-querying-and-exploration/mappify.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/mappify.html
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
       <div class="col-xs-1"></div>
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch Mappify</a>
+      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();">Launch Mappify</a>
     </div>
   </form>
 
@@ -34,7 +34,7 @@
   <div class="modal fade" id="fullModal" >
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="closeModal()" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Mappify</h5>
     </div>
     <div class="modal-body">
