--- a/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
@@ -19,7 +19,8 @@
       <div class="form-group">
         <label for="DataSet">DataSet</label>
         <div class="input-group">
-            <select id="DataSet" class="form-control" ng-model="virtuoso.dataset" ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required></select>
+            <select id="DataSet" class="form-control" ng-model="virtuoso.dataset" ng-change="updateServiceParams()"
+            ng-options="namedgraph.name as namedgraph.name for namedgraph in namedGraphs" required></select>
             <span class="input-group-btn">
                 <button type="button" class="btn btn-link reset" ng-click="refreshGraphList()">
                     <i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
@@ -28,7 +29,7 @@
         </div>
       </div>
       <div class="form-group">
-        <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();">Launch</a>
+        <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();">Launch</a>
       </div>
    
       <!-- <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();">Launch</a> -->
@@ -39,7 +40,7 @@
   <div class="modal fade" id="fullModal">
     <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" ng-click="close('#fullModal')" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="closeModal()" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Virtuoso SPARQLEndpoint</h5>
     </div>
     <div class="modal-body">
