fixed graphs refresh and store of xml jobs in the triple store

--- a/src/main/webapp/js/workbench/dashboard.html
+++ b/src/main/webapp/js/workbench/dashboard.html
@@ -47,6 +47,7 @@
    	<tr data-toggle="collapse" data-target="#{{job.name}}" class="accordion-toggle" ng-click="getJobDetail(jobIndex)">
     <td>{{job.name}}</td>
     <td>{{job.description}}</td>
+    <td>{{job.cereated}}</td>
     <td>{{job.executionCount}}</td>
     <td>{{job.launchable}}</td>
     <td>{{job.incrementable}}</td>
