add TODO in Jobs and cosmetics in dashboard

--- a/src/main/webapp/js/workbench/dashboard.html
+++ b/src/main/webapp/js/workbench/dashboard.html
@@ -38,9 +38,10 @@
   	<tr>
     <th>Name</th>
     <th>Description</th>
+    <th>Created</th>
     <th>Execution Count</th>
-    <th>Launchable</th>
-    <th>Incrementable</th>
+<!--     <th>Launchable</th>
+    <th>Incrementable</th> -->
     </tr>
 		</thead>
 		<tbody ng-repeat="job in jobs" ng-init="jobIndex = $index">
@@ -49,8 +50,8 @@
     <td>{{job.description}}</td>
     <td>{{job.cereated}}</td>
     <td>{{job.executionCount}}</td>
-    <td>{{job.launchable}}</td>
-    <td>{{job.incrementable}}</td>
+<!--     <td>{{job.launchable}}</td>
+    <td>{{job.incrementable}}</td> -->
   	</tr>
     <tr>
     <td colspan="6" class="hiddenRow" >
