--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -235,6 +235,7 @@
     <script src="js/workbench/manual-revision-and-authoring/ontowiki-controller.js"></script>
     <script src="js/workbench/classification-and-enrichment/geolift-controller.js"></script>
     <script src="js/workbench/linking-and-fusing/limes-controller.js"></script>
+    <script src="js/workbench/linking-and-fusing/fagi-gis-controller.js"></script>
     <script src="js/settings/settings-controller.js"></script>
     <script src="js/settings/datasets/graphs-controller.js"></script>
     <script src="js/settings/data-sources/endpoint-controller.js"></script>
