--- a/src/main/webapp/js/workbench/classification-and-enrichment/deer-result.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/deer-result.html
@@ -6,7 +6,7 @@
 	</div>
 
 	<h3 class="green bold">Deer</h3>
-	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
+	<b>RDF Data Extraction and Enrichment Framework</b>
 	<br>
 	<br>
 	
