--- a/src/main/webapp/js/workbench/classification-and-enrichment/deer.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/deer.html
@@ -4,10 +4,10 @@
 
 
   <dl class="dl-horizontal">
-    <dt>Version:</dt><dd>{{component.version}}</dd>
+    <dt>Version:</dt><dd>0.0.1</dd>
     <dt>Homepage:</dt><dd>{{component.homepage}}</dd>
   </dl>
-	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
+	<b>RDF Data Extraction and Enrichment Framework</b>
 	<br>
 	<br>
 	<p>To get started choose whether to process a file or endpoint, you can then choose an example or specify your own parameters.</p>
@@ -17,12 +17,6 @@
 	<i class="glyphicon glyphicon-refresh" aria-hidden="false"></i>
 	</button>
 	<div ng-show="configOptions">
-	<div class="row">
-		<div class="col-xs-8">
-		<h5 class="green bold">GeoLift Configuration</h5>
-		</div>
-	</div>
-	<br>
 	
 	<div class="row below">
 			<div class="col-xs-2">
