--- a/src/main/webapp/js/settings/settings.html
+++ b/src/main/webapp/js/settings/settings.html
@@ -26,7 +26,7 @@
         <td>Settings Graph:</td><td>{{settings.settingsGraph}}</td>
         </tr>
         <tr>
-        <td>Generator Endpoint:</td><td>{{settings.endpointService}}</td>
+        <td>Endpoint:</td><td>{{settings.endpointService}}</td>
         </tr>
     </table>
 <!--  			<div class="form-group">
