--- a/src/main/webapp/js/workbench/classification-and-enrichment/deer-result.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/deer-result.html
@@ -5,8 +5,8 @@
 	  <span class="alert-message">{{flash.message}}</span>
 	</div>
 
-	<h3 class="green bold">GeoLift</h3>
-	<b>Framework to Enrich Geographic Content in the Semantic Web</b>
+	<h3 class="green bold">Deer</h3>
+	<b>RDF Data Extraction and Enrichment Framework</b>
 	<br>
 	<br>
 	
