add Roles Manager, Rest Api and Angular service

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -166,6 +166,7 @@
   <script src="js/services/users-service.js"></script>
   <script src="js/services/authsession-service.js"></script>
   <script src="js/services/components-service.js"></script>
+  <script src="js/services/roles-service.js"></script>
   <!-- global controllers -->
   <script src="js/controllers.js"></script>
   <script src="js/login-controller.js"></script>
