fixed some user management roles dependencies and datasources

--- a/src/main/webapp/js/settings/named-graphs/graphs.html
+++ b/src/main/webapp/js/settings/named-graphs/graphs.html
@@ -2,7 +2,7 @@
 
 <div ng-controller="GraphCtrl">
 
-  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large" ng-click="new();">Add new dataset</button>
+  <button ng-if="isUserAuthenticated()" type="button" class="btn btn-success btn-large" ng-click="new();">Add new graph</button>
 
   <h4 ng-if="isUserAuthenticated()" >User Graphs</h4>
   <table ng-if="isUserAuthenticated()" class="table table-striped">
